--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
     </div>
 
     <div class="container">
-        <div class="landing content">
-            <h2>Marious L. Davis</h2>
-            <h1>Full Stack Web Developer</h1>
-            <button class="redirect" href="about.html">EXPLORE</button>
-        </div>
+      <div class="landing content">
+        <h2>Marious L. Davis</h2>
+        <h1>Full Stack Web Developer</h1>
+        <button class="redirect" href="about.html">EXPLORE</button>
+      </div>
     </div>
     <!-- scripts -->
     <script src="assets/js/particles.js"></script>
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <!-- stats.js lib -->
+    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
   </body>
 </html>
