--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </div>
     </div>
     <!-- scripts -->
-    <script src="assets/js/particles.js"></script>
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="assets/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <!-- stats.js lib -->
     <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
   </body>
