--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marious Davis | Full Stack Developer</title>
     <link href="css/index.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,700"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- particles.js container -->
