Fresh reinstallation of `particles.js`. Background and functionality present

--- a/index.html
+++ b/index.html
@@ -13,22 +13,17 @@
   <body>
     <!-- particles.js container -->
     <div id="particles-js"></div>
-    <!-- stats - count particles -->
-    <div class="count-particles">
-      <span class="js-count-particles">--</span> particles
-    </div>
 
     <div class="container">
-      <div class="landing content">
+      <div class="landing-content">
         <h1>Marious L. Davis</h1>
         <h2>Full Stack Web Developer</h2>
+        <br />
         <button class="redirect" href="about.html">EXPLORE</button>
       </div>
     </div>
     <!-- scripts -->
-    <script src="assets/js/app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <!-- stats.js lib -->
-    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+    <script type="text/javascript" src="assets\js\particles.js"></script>
+    <script type="text/javascript" src="assets\js\app.js"></script>
   </body>
 </html>
